--- a/css/style.css
+++ b/css/style.css
@@ -61,3 +61,10 @@ h1{
     height: 100%;
     margin-left:60px;
 }
+.back-button{
+    color: gray;
+    font-size: 18px;
+    position: absolute;
+    top: 40px;
+    left: 110px;
+}
